# gold

./: .gitignore  .gitmodules  CMakeLists.txt  Config.cmake.in  LICENSE  README.md  imgui.ini
assets/: square.yaml  system.yaml  two.yaml  widget.yaml
examples/: ui-example.cpp
examples/simple/: CMakeLists.txt  simple.cc
examples/simple/assets/config/: button-frame.yaml  button.yaml  colors.yaml  frame.yaml  text-frame.yaml  text.yaml
include/glad/: glad.h
include/gold/: background_color.hpp  background_color.tcc  button.h  button.hpp  button_bag.h  button_bag.hpp  button_factory.hpp  color_serialization.hpp  component.hpp  events.hpp  frame.hpp  geometry.hpp  gold.h  gold.hpp  layout.hpp  layout.tcc  monochrome_widget.hpp  render.hpp  result.hpp  serialization.hpp  size.hpp  size.tcc  text_factory.hpp  text_field.hpp  utility.hpp  widget.h  widget.hpp  yaml_colors.hpp
include/gold/impl/: component.tcc  widget.tcc
include/gui/: button.hpp  widget.hpp
include/imgui/: imgui.h
include/ion/: expected.hpp  histogram.hpp  string.hpp  system.hpp  tag.hpp  timer.hpp  try.hpp  ui.hpp
include/konbu/: konbu.h
lib/cmake/ion/: ion-config.cmake  ion-targets-noconfig.cmake  ion-targets.cmake
lib/cmake/yaml-cpp/: yaml-cpp-targets.cmake
src/: CMakeLists.txt  button.cc  button.cpp  button_bag.cc  button_bag.cpp  button_factory.cpp  color_serialization.cpp  events.cpp  frame.cpp  geometry.cpp  layout.cpp  monochrome_widget.cpp  render.cpp  serialization.cpp  size.cpp  text_factory.cpp  text_field.cpp  widget.cpp
